# solana-allnodes-protos

./: Cargo.toml
allnodes-service-protos/: Cargo.toml  build.rs
allnodes-service-protos/proto/: allnodes.proto  oracle.proto
allnodes-service-protos/src/: capabilities.rs  error.rs  flags.rs  lib.rs
