[workspace]
members = [
    "allnodes-service-protos",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
bincode = { version = "1.3.3" }
borsh = { version = "1.5.5", features = ["derive"] }
prost = { version = "0.11.9" }
serde = { version = "1.0.219"}
serde_derive = { version = "1.0.219" }
solana-hash = { version = "2.3.0", features = ["std", "borsh"] }
solana-pubkey = { version = "2.4.0" }
thiserror = { version = "2.0.11" }
tonic = { version = "0.9.2" }
tonic-build = { version = "0.9.2" }
