[workspace]
members = [
    "allnodes-service-protos",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
borsh = { version = "1.5.5", features = ["derive"] }
prost = { version = "0.14.3" }
solana-hash = { version = "2.3.0", features = ["std", "borsh"] }
solana-pubkey = { version = "2.4.0" }
thiserror = { version = "2.0.11" }
tonic = { version = "0.14.5" }
tonic-prost = { version = "0.14.5" }
tonic-prost-build = { version = "0.14.5" }
