[package]
name = "allnodes-service-protos"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
prost = { workspace = true }
solana-hash = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"] }

[build-dependencies]
tonic-build = { workspace = true }
