[package]
name = "allnodes-service-protos"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
prost = { workspace = true }
solana-hash = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["tls-native-roots", "tls-ring"] }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
